clusters/k3s-cluster/apps/chromadb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chromadb
  labels:
    name: chromadb
